added video and upper menu bar and favicon

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0071)https://www.w3schools.com/w3css/tryw3css_templates_gourmet_catering.htm -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>W3.CSS Template</title>
+<!-- saved from url=(0071)https://www.w3schools.com/w3css/tryw3css_templates_gourmet_catering.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Atanas Vasilev</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./resources/w3.css">
+<link rel="stylesheet" href="./resources/style.css">
 <style>
 body {font-family: "Times New Roman", Georgia, Serif;}
 h1, h2, h3, h4, h5, h6 {
@@ -13,38 +13,41 @@ h1, h2, h3, h4, h5, h6 {
 </style>
 </head><body>
 
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <!-- <a href="https://www.w3schools.com/w3css/tryw3css_templates_gourmet_catering.htm#home" class="w3-bar-item w3-button">Gourmet au Catering</a> -->
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="https://www.w3schools.com/w3css/tryw3css_templates_gourmet_catering.htm#about" class="w3-bar-item w3-button">About</a>
-      <a href="https://www.w3schools.com/w3css/tryw3css_templates_gourmet_catering.htm#menu" class="w3-bar-item w3-button">Projects</a>
-      <a href="https://www.w3schools.com/w3css/tryw3css_templates_gourmet_catering.htm#contact" class="w3-bar-item w3-button">Github</a>
+
+ <div class="w3-top">
+    <div class="w3-row w3-padding w3-white ">
+
+      <div class="w3-col s4">
+      <a href="" class="w3-button w3-block w3-white">PROJECTS</a>
     </div>
+
+      <div class="w3-col s4">
+        <a href="" class="w3-button w3-block w3-white">ABOUT ME</a>
+      </div>
+
+    <div class="w3-col s4">
+      <a href="https://github.com/naskovt?tab=repositories" class="w3-button w3-block w3-white">GITHUB</a>
+    </div>
+
   </div>
 </div>
 
+
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="./resources/artofcoding.jpg" alt="artofcoding Catering" width="1600" height="800">
-  <!-- <video class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home" controls loop>
-      <source src="mymovie.mp4" type="video/mp4">
+  <!-- <img class="w3-image" src="./resources/artofcoding.jpg" alt="artofcoding Catering" width="1600" height="800"> -->
+  <video class="w3-image" autoplay loop>
+      <source src="./resources/mymovie.mp4" type="video/mp4">
       Your browser does not support the video tag.
-  </video> -->
+  </video>
+<div class="video-div">
 
-  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-    <h1 class="w3-xxlarge">Le Catering</h1>
-  </div>
+
+</div>
 </header>
 
 
-<hr>
-
 <h1 class="w3-center">Behind the scenes</h1><br>
-
-<hr>
 
 
 <!-- Page content -->
@@ -154,4 +157,11 @@ h1, h2, h3, h4, h5, h6 {
 
 <!-- Footer -->
 
-<script type="text/javascript" async="" src="./resources/1fa16f6ccbee745a0c.js.download"></script></body></html>
+<script type="text/javascript" async="" src="./resources/engine.js"></script></body></html>
+
+<script>
+    function scrollToElement() {
+      //var elmnt = document.getElementById("content");
+      //elmnt.scrollIntoView();
+    }
+</script>
