--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
   <!-- <img class="w3-image" src="./resources/artofcoding.jpg" alt="artofcoding Catering" width="1600" height="800"> -->
+  <p class="w3-large">THE ART OF CODING.</p>
+  
   <video class="w3-image" muted autoplay loop>
       <source src="./resources/mymovie.mp4" type="video/mp4">
       Your browser does not support the video tag.
@@ -59,18 +61,33 @@ h1, h2, h3, h4, h5, h6 {
           <img src="./resources/learntocode.jpg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
     </div>
 
-    <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">Technology</h1><br>
-      <h5 class="w3-center">Tradition since 2016</h5>
-      <p class="w3-large">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+    <div class="w3-col m6 w3-padding-large w3-rest">
+      <h1 class="w3-center">Interior Walkthrough</h1><br>
+      <h5 class="w3-center">VR interactive environment for interior design</h5>
+      <p class="w3-medium">The application uses a modern VR approach for walking around inside an interior.
+         The main features include customizing object's materials runtime with the provided joysticks and interacting with pickable items. Made with Unity.</p>
       <!-- <p class="w3-large w3-text-grey w3-hide-medium">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
     </div>
   </div>
-  
   <hr>
-  
 
-    <hr>
+  <div class="w3-col m6 w3-padding-large w3-rest">
+      <h1 class="w3-center">Aircraft Marshalling Simulator</h1><br>
+      <h5 class="w3-center">VR Simulator for learning the basics of the aircraft marshalling.</h5>
+      <p class="w3-medium">The simulator has a custom 3D gesture recognizer system for recognizing movements made with the joysticks. Another interesting feature is the evaluation method for giving final mark to the practitioner, which is based on the correct signals with the joysticks. Navigating the pilot to make a good trajectory for parking the airplane is another evaluation. Made with Unity.</p>
+      <!-- <p class="w3-large w3-text-grey w3-hide-medium">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
+    </div>
+  </div>
+  <hr>
+
+  <div class="w3-col m6 w3-padding-large w3-rest">
+      <h1 class="w3-center">AR Watch</h1><br>
+      <h5 class="w3-center">Try on application for hand watches with custom runtime reflections from the surrounding area.</h5>
+      <p class="w3-medium">The reflections on the watch are from the back and front cameras streams. For performance reasons, a custom combination of vertex and surface shaders is used, in order to get instantly the back camera feed as a spherical reflection on the watch. The front camera's photo is taken only once at startup of the app and is merged with the live sphercical reflection from the back camera, so that you can see your face in the watch, when it is pointed to you as looking into a mirror. Made with Unity.</p>
+      <!-- <p class="w3-large w3-text-grey w3-hide-medium">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
+    </div>
+  </div>
+  <hr>
 
       <!-- Menu Section -->
   <div class="w3-row w3-padding-64" id="menu">
