fix test for responsive centered contents

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 5px;
 }
 </style>
-</head><body>
+</head>
+
+<body style="width:100%;">
 
 <!-- Menu -->
  <div class="w3-top m3 l3" >
@@ -34,9 +36,9 @@ h1, h2, h3, h4, h5, h6 {
 
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+<header class="w3-display-container w3-content w3-wide"  id="home">
   <!-- <img class="w3-image" src="./resources/artofcoding.jpg" alt="artofcoding Catering" width="1600" height="800"> -->
-  <p class="w3-large">THE ART OF CODING.</p>
+  <!-- <p class="w3-large">THE ART OF CODING.</p> -->
   
   <video class="w3-image" muted autoplay loop>
       <source src="./resources/mymovie.mp4" type="video/mp4">
@@ -53,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 <!-- Page content -->
-<div class="w3-content w3-center " style="max-width:1100px; text-align: center" >
+<div  style="width:100%; text-align: center" >
 
   <!-- Interior walkthrough Section -->
   <div class="w3-row w3-padding-64" id="about">
