modified menu sizing and fixed skills and contacts text-align center

--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@ h1, h2, h3, h4, h5, h6 {
 
 <!-- Menu -->
 <div class="top-bar">
-    <div class="top-menu-container">
 
         <a onclick="scrollToProjects()" class="button_">PROJECTS</a>
         <a href="https://github.com/naskovt?tab=repositories" class="button_">GITHUB</a>
-        <a onclick="scrollToAbout()" class="button_">ABOUT ME</a>
+        <a onclick="scrollToAbout()" class="button_">CONTACT</a>
 
-    </div>
 </div>
 
 
