top menu ready with hover effect

--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Menu -->
 <div class="top-bar">
 
-        <a onclick="scrollToProjects()" class="button_">PROJECTS</a>
-        <a href="https://github.com/naskovt?tab=repositories" class="button_">GITHUB</a>
-        <a onclick="scrollToAbout()" class="button_">CONTACT</a>
+  <a onclick="scrollToProjects()" class="button_ hvr-shutter-in-vertical">PROJECTS</a>
+  <a href="https://github.com/naskovt?tab=repositories" class="button_ hvr-shutter-in-vertical">GITHUB</a>
+  <a onclick="scrollToAbout()" class="button_ hvr-shutter-in-vertical">CONTACT</a>
 
 </div>
 
 
 <!-- Header -->
-<header class="-display-container -content -wide">
+<header >
   <!-- <img class="-image" src="./resources/artofcoding.jpg" alt="artofcoding Catering" width="1600" height="800"> -->
   <!-- <p class="-large">THE ART OF CODING.</p> -->
   
-  <video class="-image" muted autoplay loop>
-      <source src="./resources/mymovie.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-  </video>
 <div class="video-div">
-
-
+    <video class="-image" muted autoplay loop>
+        <source src="./resources/mymovie.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </div>
-</header>
 
+
+
+</header>
 
 <h1 class="-center" id="my-projects">Behind the scenes</h1><br>
 
 
 <!-- Page content -->
-<div  style="width:100%; text-align: center" >
+<div  class="page-body -center" >
 
   <!-- Interior walkthrough Section -->
   <div class="-row -padding-64">
