--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
   <div class="ontop-of-video">
 
-    <p class="ontop-of-video-p">
+    <p class="ontop-of-video-p fade-out">
         The creative side of coding.
     </p>
     
-    <div class="triangle-container" onclick="scrollToProjects();">
+    <div class="triangle-container fade-out" onclick="scrollToProjects();">
       <img  class="triangle bounce" src="./resources/pictures/arrow2.png" alt="arrow">
     </div>
 
@@ -396,7 +396,8 @@ window.onresize = AutoResizeDiv;
 //////////////////// Fade in out ontop of video p
 
 var opacityValue = 1;
-var opacityElement = document.getElementsByClassName("ontop-of-video-p");
+var opacityElements = document.getElementsByClassName("fade-out");
+var arraySize = opacityElements.length;
 
 function delayedFadeOutElement(){
   window.setTimeout(fadeOutElement, 2200); // miliseconds
@@ -405,11 +406,16 @@ function delayedFadeOutElement(){
 function fadeOutElement(){
 
   if (opacityValue > 0){
+
+
     opacityValue -= 0.1; // subtract each time from opacity
-    opacityElement[0].style.opacity = String(opacityValue);
+
+    for(var i = 0 ; i < arraySize; i++){
+      opacityElements[i].style.opacity = String(opacityValue);
+    } 
+
     window.setTimeout(fadeOutElement, 80); // miliseconds delay between subtractions
   }
-  // console.log("p fade out effect"); 
 
 }
 
