--- a/index.html
+++ b/index.html
@@ -325,52 +325,54 @@
 
 
   // smooth scroll JS only!
-  function easeInOutQuad(t){
-    return t < 0.5 ? 2 * t * t : -1 + (4 - 2 * t) * t;
-  }
+//   function easeInOutQuad(t){
+//     return t < 0.5 ? 2 * t * t : -1 + (4 - 2 * t) * t;
+//   }
   
-  function scrollIt(destination, duration, easing, callback) {
+//   function scrollIt(destination, duration, easing, callback) {
 
-    const start = window.pageYOffset;
-    const startTime = 'now' in window.performance ? performance.now() : new Date().getTime();
-    const documentHeight = Math.max(document.body.scrollHeight, document.body.offsetHeight, document.documentElement.clientHeight, document.documentElement.scrollHeight, document.documentElement.offsetHeight);
-    const windowHeight = window.innerHeight || document.documentElement.clientHeight || document.getElementsByTagName('body')[0].clientHeight;
-    const destinationOffset = typeof destination === 'number' ? destination : destination.offsetTop;
-    const destinationOffsetToScroll = Math.round(documentHeight - destinationOffset < windowHeight ? documentHeight - windowHeight : destinationOffset);
+//     const start = window.pageYOffset;
+//     const startTime = 'now' in window.performance ? performance.now() : new Date().getTime();
+//     const documentHeight = Math.max(document.body.scrollHeight, document.body.offsetHeight, document.documentElement.clientHeight, document.documentElement.scrollHeight, document.documentElement.offsetHeight);
+//     const windowHeight = window.innerHeight || document.documentElement.clientHeight || document.getElementsByTagName('body')[0].clientHeight;
+//     const destinationOffset = typeof destination === 'number' ? destination : destination.offsetTop;
+//     const destinationOffsetToScroll = Math.round(documentHeight - destinationOffset < windowHeight ? documentHeight - windowHeight : destinationOffset);
 
-    if ('requestAnimationFrame' in window === false) {
-      window.scroll(0, destinationOffsetToScroll);
-      if (callback) {
-        callback();
-      }
-      return;
-    }
+//     if ('requestAnimationFrame' in window === false) {
+//       window.scroll(0, destinationOffsetToScroll);
+//       if (callback) {
+//         callback();
+//       }
+//       return;
+//     }
 
-    function scroll() {
-      const now = 'now' in window.performance ? performance.now() : new Date().getTime();
-      const time = Math.min(1, ((now - startTime) / duration));
-      const timeFunction = easeInOutQuad(time);
-      window.scroll(0, Math.ceil((timeFunction * (destinationOffsetToScroll - start)) + start));
-      if (window.pageYOffset === destinationOffsetToScroll) {
-        if (callback) {
-          callback();
-        }
-        return;
-      }
-      requestAnimationFrame(scroll);
-    }
+//     function scroll() {
+//       const now = 'now' in window.performance ? performance.now() : new Date().getTime();
+//       const time = Math.min(1, ((now - startTime) / duration));
+//       const timeFunction = easeInOutQuad(time);
+//       window.scroll(0, Math.ceil((timeFunction * (destinationOffsetToScroll - start)) + start));
+//       if (window.pageYOffset === destinationOffsetToScroll) {
+//         if (callback) {
+//           callback();
+//         }
+//         return;
+//       }
+//       requestAnimationFrame(scroll);
+//     }
 
   
-  scroll();
-}
+//   scroll();
+// }
 
 
 
 
 function scrollToAbout(){
-  var elmnt = document.getElementById("about-me-scroll");
 
-  scrollIt(elmnt, 1300, 'easeInOutQuad');
+  document.getElementById("about-me-scroll").scrollIntoView();
+
+  //var elmnt = document.getElementById("about-me-scroll");
+  //scrollIt(elmnt, 1300, 'easeInOutQuad');
 }
 
 function scrollToProjects(){
