changed about me text

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     <div class="my-contact-container">
       <p >&emsp;&emsp;As a child, I've been interested in technology and creativity and always strived to invent new things.
          Since the day I drew my first custom board game till now, I'm still excited about inventions that make the people impassioned.
-          For the past 2 years, I've been developing immersive virtual worlds and exploring the infitive universe of the computer technologies combined with creativity.</p>
+          For the past 2 years, I've been developing immersive virtual worlds and exploring the infinite universe of the computer technologies combined with creativity.</p>
     </div>
 
   </div>
