changed menu button from projects to linkedin profile

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <!-- Menu -->
 <div class="top-bar">
 
-  <a onclick="scrollToProjects()" class="button_ hvr-shutter-in-vertical">PROJECTS</a>
   <a href="https://github.com/naskovt?tab=repositories" class="button_ hvr-shutter-in-vertical">GITHUB</a>
+  <a href="https://www.linkedin.com/in/atanas-vasilev-7b1923149/" class="button_ hvr-shutter-in-vertical">LinkedIn</a>
   <a onclick="scrollToAbout()" class="button_ hvr-shutter-in-vertical">ABOUT ME</a>
 
 </div>
