changed buttons text nad arrow left bouncing

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <!-- Menu -->
 <div class="top-bar">
 
-  <a href="https://github.com/naskovt?tab=repositories" class="button_ hvr-shutter-in-vertical">GITHUB</a>
+  <a href="https://github.com/naskovt?tab=repositories" class="button_ hvr-shutter-in-vertical">GitHub</a>
   <a href="https://www.linkedin.com/in/atanas-vasilev-7b1923149/" class="button_ hvr-shutter-in-vertical">LinkedIn</a>
-  <a onclick="scrollToAbout()" class="button_ hvr-shutter-in-vertical">ABOUT ME</a>
+  <a onclick="scrollToAbout()" class="button_ hvr-shutter-in-vertical">About Me</a>
 
 </div>
 
@@ -30,7 +30,7 @@
         The creative side of coding.
     </p>
     
-    <div class="triangle-container fade-out" onclick="scrollToProjects();">
+    <div class="triangle-container" onclick="scrollToProjects();">
       <img  class="triangle bounce" src="./resources/pictures/arrow2.png" alt="arrow">
     </div>
 
